--- a/contactme.html
+++ b/contactme.html
@@ -59,85 +59,40 @@
         </div>
     </nav>
 
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <h1>CONTACT</h1>
+            </div>
+        </div>
 
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <p>
+                    I’m always looking to collaborate with new people.
+                     If you have project idea in mind,wanna make friend or if you want any advise on my field please don’t hesitate to get in touch. 
+                     You can either send me a direct message on social media or fill out the form below. I look forward to hearing from you
+                </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <a href="keiredinaman@gmail.com" style="color: black;"><p>keiredinaman@gmail.com</p></a>
+                
+            </div>
+        </div>
 
-    <table >
-        <tr align="center">
-            <td><h1>CONTACT</h1></td>
-        </tr>
-        <tr align="center">
-            <td>
-                <table>
-                    <tr>
-                        <td width="300px"></td>
-                        <td >
-                            <p>
-                                &nbsp;&nbsp;&nbsp;&nbsp; I’m always looking to collaborate with new people.
-                                 If you have project idea in mind,wanna make friend or if you want any advise on my field please don’t hesitate to get in touch. 
-                                 You can either send me a direct message on social media or fill out the form below. I look forward to hearing from you
-                            </p>
-                        </td>
-                        <td width="300px"></td>
-                    </tr>
-                </table>
-            </td>
-        </tr>
-        <tr align="center">
-            <td>
-                <a href="https://www.instagram.com/"><img src="images/logos/inst.png" alt="instagram logo" width="50" height="50"></a>&emsp;
-                <a href="https://www.twitter.com/"><img src="images/logos/t2tr.png" alt="twitter logo"  width="40" height="40"></a>&emsp; 
-                <a href="https://t.me/@K3rastar"><img src="images/logos/telgrm.png" alt="tg logo" width="40" height="40"></a>&emsp;
+        <div class="row ">
+            <div class="col-md-12 text-center ">
+                <a href="https://instagram.com" class=" btn  btn-social-icon btn-instagram btn-lg"><i class="fa fa-instagram"></i></a>
+                <a href="https://twitter.com"    class="  btn btn-social-icon btn-twitter btn-lg" ><i class="fa fa-twitter"></i></a>
+                <a href="https://t.me/@K3rastar" class="btn btn-social-icon btn-vk btn-lg"><i class="fa fa-telegram "></i></a>
                 <a href="tel:0927214126"><img src="images/logos/call.png" alt="call icon" width="40" height="40"></a>&emsp;
-                <a href="https://www.facebook.com/keredin.aman.7"><img src="images/logos/facebk.png" alt="fb logo" width="40" height="40"></a>&emsp;
-            </td>
-        </tr>
-        <tr height ="100px">
-            <td></td>
-        </tr>
-        <tr align="center">
-            <td>
-                <form action="mailto:se.keiredinaman@gmail.com" method="POST">
-                    <table >
-                        <figure>
-                            <tr >
-                                <td><label for="name">NAME &#42;</label></td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <input type="text" name="name" id="name" size="47" >
-                                    <figcaption>First Name</figcaption>
-                                </td>
-                                <td>
-                                    <input type="text" name="name" id="name" size="47" >
-                                    <figcaption>Last Name</figcaption>
-                                </td>
-                            </tr>
+                <a  href="http://facebook.com"    class=" btn btn-social-icon btn-facebook btn-lg"><i class="fa fa-facebook"></i></a>
+            </div>
+        </div>
+    </div>
 
-
-                        </figure>
-                    </table><br><br><br>
-
-                    <table>
-                        <tr>
-                            <td>
-                                <label for="subject">SUBJECT &#42;</label><br>
-                                <input type="text" name="subject" id="subject" size="100px" aria-setsize="20px"><br><br><br>
-                                <label for="email">EMAIL &#42;</label><br>
-                                <input type="email" name="email" id="email" size="100"><br><br><br>
-                                <label for="text">MESSAGE &#42;</label><br>
-                                <textarea name="text" id="text" cols="100" rows="10"></textarea><br><br><br>
-                                <input type="submit" name="" id="" value="SUBMIT">
-                                <input type="reset">
-                            </td>
-                        </tr>
-                    </table>
-                    
-
-                </form>
-
-            </td>
-        </tr>
-    </table>
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
