fourth commit: Gallery page updated using bootstrap and css

--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
                 </li>
 
                 <li class="nav-item active">
-                    <a class="nav-link" href="photograpy.html">Photograpy <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="gallery.html">Gallery <span class="sr-only">(current)</span></a>
                 </li>
 
                 <li class="nav-item active">
