--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </li>
 
                 <li class="nav-item active">
-                    <a class="nav-link" href="photograpy.html">Photograpy <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="gallery.html">Gallery <span class="sr-only">(current)</span></a>
                 </li>
 
                 <li class="nav-item active">
@@ -60,7 +60,7 @@
         </div>
     </nav>
 
-    <div  class="container">
+    <div  class="container belowNav">
         <div class="row">
             <div class="col-md-12">
                 <h1>Hey Everyone, welcome to my personal web page</h1>
