--- a/contactme.html
+++ b/contactme.html
@@ -26,7 +26,7 @@
                 </li>
 
                 <li class="nav-item active">
-                    <a class="nav-link" href="photograpy.html">Photograpy <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="gallery.html">Gallery <span class="sr-only">(current)</span></a>
                 </li>
 
                 <li class="nav-item active">
@@ -59,7 +59,7 @@
         </div>
     </nav>
 
-    <div class="container">
+    <div class="container belowNav">
         <div class="row">
             <div class="col-md-12 text-center">
                 <h1>CONTACT</h1>
