--- a/contactme.html
+++ b/contactme.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="images/logos/mylogo.jpg">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="assets/images/logos/mylogo.jpg">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <title>Keiredin Aman-Student.</title>
@@ -30,7 +30,7 @@
                 </li>
 
                 <li class="nav-item active">
-                    <a class="nav-link" href="about.html">About me <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="blog.html">Blog <span class="sr-only">(current)</span></a>
                 </li>
 
                 <li class="nav-item active">
@@ -87,7 +87,7 @@
                 <a href="https://instagram.com" class=" btn  btn-social-icon btn-instagram btn-lg"><i class="fa fa-instagram"></i></a>
                 <a href="https://twitter.com"    class="  btn btn-social-icon btn-twitter btn-lg" ><i class="fa fa-twitter"></i></a>
                 <a href="https://t.me/@K3rastar" class="btn btn-social-icon btn-vk btn-lg"><i class="fa fa-telegram "></i></a>
-                <a href="tel:0927214126"><img src="images/logos/call.png" alt="call icon" width="40" height="40"></a>&emsp;
+                <a href="tel:0927214126"><img src="assets/images/logos/call.png" alt="call icon" width="40" height="40"></a>&emsp;
                 <a  href="http://facebook.com"    class=" btn btn-social-icon btn-facebook btn-lg"><i class="fa fa-facebook"></i></a>
             </div>
         </div>
