--- a/blog2(freindship).html
+++ b/blog2(freindship).html
@@ -150,6 +150,20 @@
         </div>
     </div>
 
+    <footer>
+        <div class="row">
+            <div class="col-md-12 text-left">
+                <a href="blog1(biography).html" class="display-4 text-dark"><i class="fa fa-angle-double-left" aria-hidden="true">My Biography</i></a>
+                
+            </div>
+
+            <div class="col-md-12 text-right">
+                <a href="blog3.html" class="display-4 text-dark">Impact of social media on the youth<i class="fa fa-angle-double-left" aria-hidden="true"></i></a>
+                
+            </div>
+        </div>
+    </footer>
+
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
